# veloci

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  justfile  transactions_2025.csv
config/: veloci-auth.yaml.example  veloci.toml  veloci.toml.example
docs/: conditions-editor.md  impl-system-entries.md  veloci-ref.md  veloci-spec.docx  veloci-spec.md
docs/superpowers/plans/: 2026-06-26-architecture-scaffold.md  2026-07-14-orval-tanstack-client.md  2026-07-18-canonical-merchants.md
docs/superpowers/specs/: 2026-06-26-architecture-design.md  2026-06-29-processing-engine-design.md  2026-06-30-veloci-api-design.md  2026-06-30-veloci-auth-design.md  (+11 more)
migrations/app/: 001_app_schema.sql  002_financial_schema.sql  002_rbac_seed.sql  003_pipeline_redesign.sql
migrations/auth/: 001_auth_schema.sql
scripts/: dev-seed.sql  enqueue_import.py  export_review_queue.py  init-db.sh  postgres-entrypoint.sh  toml-get.sh
services/api/: Dockerfile  generate.go  go.mod  go.sum  main.go
services/auth/: .air.toml  .gitignore  Dockerfile  go.mod  go.sum  main.go
services/engine/: Cargo.toml  Dockerfile  Dockerfile.dev
services/engine/src/: config.rs  consumer.rs  db.rs  health.rs  main.rs
services/engine/src/jobs/: mod.rs
services/engine/src/pipeline/: mod.rs  stage0.rs  stage1.rs  stage2.rs  stage3.rs  stage4.rs  stage5.rs  stage6.rs  stage7.rs  types.rs
services/veloci/: .air.toml  Dockerfile.dev  generate.go  go.mod  go.sum  main.go
services/web/: .air.toml  .dockerignore  Dockerfile  Dockerfile.dev  go.mod  go.sum  main.go  nginx.conf  openapi.json  orval.config.ts  package-lock.json  package.json  vite.config.ts
services/web-old/: nginx.conf  package.json  vite.config.ts
(+285 files in other folders)
