[package]
name = "veloci-engine"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"

[dependencies]
tokio              = { version = "1",   features = ["full"] }
lapin              = "2"
sqlx               = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
serde              = { version = "1",   features = ["derive"] }
serde_json         = "1"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
backon             = "1"
futures-lite       = "2"
