[package]
name = "veloci-engine"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
tokio              = { version = "1",    features = ["full"] }
lapin              = "2"
sqlx               = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "chrono", "bigdecimal"] }
bigdecimal         = "0.4"
serde              = { version = "1",   features = ["derive"] }
serde_json         = "1"
anyhow             = { version = "1",   features = ["backtrace"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
backon             = "1"
futures             = "0.3"
futures-lite       = "2"
rayon              = "1"
config             = { version = "0.14", features = ["toml"] }
uuid               = { version = "1",   features = ["v4", "serde"] }
chrono             = { version = "0.4", features = ["serde"] }
csv                = "1"
regex              = "1"
thiserror          = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
